# img-to-video

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/install/: action.yml
.github/workflows/: build.yml  lint.yml  release.yml  tests.yml
src/: convert.rs  error.rs  images.rs  main.rs
src/settings/: cli.rs  config.rs  mod.rs  settings.rs
